libe2p: apply LDFLAGS when building tests
This was previously addressed by Michael Forney on commit 53904ae543591a
but it seems the test cases from lib/e2p (tst_ostype and tst_feature)
were missed.

Fix them by adding the same $(ALL_LDFLAGS) to those two targets.

Tested by building it on a system that depends on LDFLAGS to produce
working binaries and confirming that `make check` succeeds.

Reported-by: Eric Christopher <echristo@google.com>
Signed-off-by: Filipe Brandenburger <filbranden@google.com>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/lib/e2p/Makefile.in
+++ b/lib/e2p/Makefile.in
@@ -68,12 +68,12 @@ e2p.pc: $(srcdir)/e2p.pc.in $(top_builddir)/config.status
 tst_ostype: $(srcdir)/ostype.c
 	$(E) "	LD $@"
 	$(Q) $(CC) -DTEST_PROGRAM -I$(top_srcdir)/lib -o tst_ostype \
-		$(srcdir)/ostype.c $(ALL_CFLAGS)
+		$(srcdir)/ostype.c $(ALL_CFLAGS) $(ALL_LDFLAGS)
 
 tst_feature: $(srcdir)/feature.c
 	$(E) "	LD $@"
 	$(Q) $(CC) -DTEST_PROGRAM -I$(top_srcdir)/lib -o tst_feature \
-		$(srcdir)/feature.c $(ALL_CFLAGS)
+		$(srcdir)/feature.c $(ALL_CFLAGS) $(ALL_LDFLAGS)
 
 check::	tst_ostype tst_feature
 	./tst_ostype
