--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -15,6 +15,9 @@
 /* Define to 1 to enable mmp support */
 #undef CONFIG_MMP
 
+/* Define to 1 to enable tdb support */
+#undef CONFIG_TDB
+
 /* Define to 1 if the testio I/O manager should be enabled */
 #undef CONFIG_TESTIO_DEBUG
 
@@ -656,6 +659,9 @@
 
 /* The size of `short', as computed by sizeof. */
 #undef SIZEOF_SHORT
+
+/* The size of `time_t', as computed by sizeof. */
+#undef SIZEOF_TIME_T
 
 /* Define as the maximum value of type 'size_t', if the system doesn't define
    it. */
