--- a/util/subst.conf.in
+++ b/util/subst.conf.in
@@ -18,3 +18,5 @@ $prefix			@prefix@
 # Enable the documentation for the journal device mke2fs, tune2fs, and
 # e2fsck's man page
 JDEV			
+# Enable the documentation for the tdb profile in e2fsck.conf's man page
+TDB_MAN_COMMENT		@TDB_MAN_COMMENT@
