--- a/debian/control.in
+++ b/debian/control.in
@@ -7,18 +7,20 @@ Source: e2fsprogs
 Section: admin
 Priority: required
 Maintainer: Theodore Y. Ts'o <tytso@mit.edu>
-Build-Depends: gettext, texinfo, pkg-config, gcc-multilib [mips mipsel], libfuse-dev, libattr1-dev, debhelper (>= 9.0), UTIL_LINUX_NG_DEFINES m4
+Build-Depends: gettext, texinfo, pkg-config, gcc-multilib [mips mipsel], libfuse-dev [linux-any kfreebsd-any], libattr1-dev, debhelper (>= 9.0), UTIL_LINUX_NG_DEFINES m4
 Standards-Version: 3.9.8
 Homepage: http://e2fsprogs.sourceforge.net
 
+ifdef(`FUSE2FS',``
 Package: fuse2fs
 Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Architecture: any
+Architecture: linux-any kfreebsd-any
 Description: ext2 / ext3 / ext4 file system driver for FUSE
  fuse2fs is a FUSE file system client that supports reading and
  writing from devices or image files containing ext2, ext3, and ext4
  file systems.
+'')dnl
 
 ifdef(`E2FSCK_STATIC',``
 Package: e2fsck-static
