--- a/lib/ss/Makefile.in
+++ b/lib/ss/Makefile.in
@@ -28,8 +28,8 @@ BSDLIB_MYDIR = ss
 BSDLIB_INSTALL_DIR = $(root_libdir)
 
 TAGS=etags
-COMPILE_ET=../et/compile_et --build-tree
-MK_CMDS=_SS_DIR_OVERRIDE=. ./mk_cmds
+MK_CMDS=	_SS_DIR_OVERRIDE=$(srcdir) ./mk_cmds
+COMPILE_ET=	_ET_DIR_OVERRIDE=$(srcdir)/../et ../et/compile_et
 
 .c.o:
 	$(E) "	CC $<"
