--- a/lib/support/Makefile.in
+++ b/lib/support/Makefile.in
@@ -41,7 +41,7 @@ LIBDIR= support
 @MAKEFILE_LIBRARY@
 @MAKEFILE_PROFILE@
 
-COMPILE_ET=$(top_builddir)/lib/et/compile_et --build-tree
+COMPILE_ET=	_ET_DIR_OVERRIDE=$(srcdir)/../et ../et/compile_et
 
 .c.o:
 	$(E) "	CC $<"
