--- a/debian/rules
+++ b/debian/rules
@@ -376,7 +376,7 @@ ${BUILDSTDSTAMP}: ${CFGSTDSTAMP}
 	fi
 	$(MAKE) -C ${stdbuilddir} V=1 all
 ifneq ($(BUILD_E2FSCK_STATIC),no)
-	$(MAKE) -C ${stdbuilddir}/e2fsck e2fsck.static
+	$(MAKE) -C ${stdbuilddir}/e2fsck V=1 e2fsck.static
 endif
 	if ! test -d debian/orig-gmo ; then \
 		mkdir debian/orig-gmo ; \
