Fix FreeBSD pmake support
Fix a typo in the @ifNotGNUmake@ case of MCONFIG.in.

Also allow the FORCE_NATIVE_MAKE to force the use of the non-GNU make
optimized Makefile.  The resulting makefile will work with GNU Make
4.2.1, although "make V=1" won't be honored.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/MCONFIG.in
+++ b/MCONFIG.in
@@ -68,8 +68,8 @@ pkgconfigdir = $(libdir)/pkgconfig
 @ifGNUmake@   endif
 @ifGNUmake@ endif
 
-@ifNotGNUmake@ CHECK_CMD=@true
-@ifNotGNUmake@ CPPHECK_CMD=@true
+@ifNotGNUmake@ CHECK_CMD=true
+@ifNotGNUmake@ CPPCHECK_CMD=true
 
 CC = @CC@
 BUILD_CC = @BUILD_CC@
