e2fsck: enforce that extra_isize must be a multiple of four
We need to prevent unaligned accesses, so treat any extra_isize which
is not a multiple of four as an bug.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/lib/ext2fs/ext2_err.et.in
+++ b/lib/ext2fs/ext2_err.et.in
@@ -539,4 +539,7 @@ ec	EXT2_ET_BAD_CRC,
 ec	EXT2_ET_CORRUPT_JOURNAL_SB,
 	"The journal superblock is corrupt"
 
+ec	EXT2_ET_INODE_CORRUPTED,
+	"Inode is corrupted"
+
 	end
